<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.xtext.example.mydsl</groupId>
  <version>1.0.0-SNAPSHOT</version>
  <artifactId>org.xtext.example.mydsl.parent</artifactId>
  <packaging>pom</packaging>

  <properties>
    <xtextVersion>2.39.0</xtextVersion>
    <mwe2Version>2.22.0</mwe2Version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <!-- Tycho settings -->
    <tycho-version>4.0.12</tycho-version>
    <!-- Define overridable properties for tycho-surefire-plugin -->
    <platformSystemProperties></platformSystemProperties>
    <moduleProperties></moduleProperties>
    <systemProperties></systemProperties>
    <additionalTestArguments></additionalTestArguments>
    <jacoco.version>0.8.11</jacoco.version>
    <jacoco.destFile>${project.basedir}/../target/jacoco.exec</jacoco.destFile>
    <sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
  </properties>
  <modules>
    <module>org.xtext.example.mydsl</module>
    <module>org.xtext.example.mydsl.ide</module>
    <module>org.xtext.example.mydsl.ui</module>
    <module>org.xtext.example.mydsl.target</module>
    <module>org.xtext.example.mydsl.tests</module>
    <module>org.xtext.example.mydsl.ui.tests</module>
    <module>org.xtext.example.mydsl.standalone</module>
    <module>jacoco-aggregate-report</module>
  </modules>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.eclipse.xtext</groupId>
        <artifactId>xtext-dev-bom</artifactId>
        <version>${xtextVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <target>
            <artifact>
              <groupId>org.xtext.example.mydsl</groupId>
              <artifactId>org.xtext.example.mydsl.target</artifactId>
              <version>${project.version}</version>
            </artifact>
          </target>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
          <dependency-resolution>
            <extraRequirements>
              <requirement>
                <type>eclipse-plugin</type>
                <id>org.eclipse.xtext.logging</id>
                <versionRange>0.0.0</versionRange>
              </requirement>
              <!-- to get the org.eclipse.osgi.compatibility.state plugin if the target
								platform is Luna or later. (backward compatible with kepler and previous
								versions) see https://bugs.eclipse.org/bugs/show_bug.cgi?id=492149 -->
              <requirement>
                <type>eclipse-feature</type>
                <id>org.eclipse.rcp</id>
                <versionRange>0.0.0</versionRange>
              </requirement>
            </extraRequirements>
          </dependency-resolution>
        </configuration>
      </plugin>
      
      <!-- JaCoCo plugin at parent level -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <destFile>${project.build.directory}/jacoco.exec</destFile>
              <propertyName>tycho.testArgLine</propertyName>
              <append>true</append>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}/xtend-gen</directory>
                <includes>
                  <include>**/*</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <!--
						Can be removed after first generator execution
						https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097
					-->
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <compilerArgument>-err:-forbidden</compilerArgument>
            <useProjectSettings>false</useProjectSettings>
          </configuration>
        </plugin>
        <!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
					To skip tests, but still compile them, use: -DskipTests
					To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
					at end) -->
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${tycho-version}</version>
          <configuration>
            <!-- Critical: use tycho.testArgLine property set by JaCoCo -->
            <argLine>${tycho.testArgLine} ${platformSystemProperties} ${systemProperties} ${moduleProperties} ${additionalTestArguments}</argLine>
            <failIfNoTests>false</failIfNoTests>
            <useUIHarness>false</useUIHarness>
            <testFailureIgnore>true</testFailureIgnore>
          </configuration>
        </plugin>
        
        <plugin>
          <groupId>org.eclipse.xtend</groupId>
          <artifactId>xtend-maven-plugin</artifactId>
          <version>${xtextVersion}</version>
          <executions>
            <execution>
              <goals>
                <goal>compile</goal>
                <goal>xtend-install-debug-info</goal>
                <goal>testCompile</goal>
                <goal>xtend-test-install-debug-info</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <outputDirectory>${basedir}/xtend-gen</outputDirectory>
            <testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
            <!-- Critical for JaCoCo to map coverage to Xtend source files -->
            <xtendAsPrimaryDebugSource>true</xtendAsPrimaryDebugSource>
            <writeTraceFiles>true</writeTraceFiles>
            <!-- Ensure trace files are generated for coverage mapping -->
            <generateSyntheticSuppressWarnings>true</generateSyntheticSuppressWarnings>
            <generateGeneratedAnnotation>true</generateGeneratedAnnotation>
            <includeDateInGeneratedAnnotation>false</includeDateInGeneratedAnnotation>
          </configuration>
        </plugin>

        <!-- Fix maven-project-info-reports-plugin version -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.4.5</version>
        </plugin>
        
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        
        <!-- JaCoCo Plugin Configuration for Xtend -->
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.version}</version>
          <configuration>
            <!-- Exclude test classes and generated trace files -->
            <excludes>
              <exclude>**/*.xtendbin</exclude>
              <exclude>**/*._trace</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <repositories>
    <repository>
      <id>codehaus-snapshots</id>
      <name>disable dead 'Codehaus Snapshots' repository</name>
      <url>http://nexus.codehaus.org/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <!-- This must be disabled explicitly, otherwise it is enabled by
    https://github.com/mojohaus/mojo-parent 
			which is taken from exec-maven-plugin from at least version 1.6.0 -->
    <repository>
      <id>ossrh-snapshots</id>
      <name>ossrh-snapshots</name>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <!-- This is enabled by /org/sonatype/oss/oss-parent/7 used as parent by 
			org/xtext/antlr-generator/3.2.1 -->
    <repository>
      <id>sonatype-nexus-snapshots</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>codehaus-snapshots</id>
      <name>disable dead 'Codehaus Snapshots' repository</name>
      <url>http://nexus.codehaus.org/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>ossrh-snapshots</id>
      <name>ossrh-snapshots</name>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
    </pluginRepository>
    <pluginRepository>
      <id>sonatype-nexus-snapshots</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <profiles>
    <profile>
      <id>macos</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
        <platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
      </properties>
    </profile>
    <profile>
      <id>jdk9-or-newer</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
      </properties>
    </profile>
    
    <!-- Profile for coverage with proper configuration -->
    <profile>
      <id>coverage</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <executions>
              <execution>
                <id>default-prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>${project.build.directory}/jacoco.exec</destFile>
                  <propertyName>tycho.testArgLine</propertyName>
                  <append>true</append>
                </configuration>
              </execution>
              <execution>
                <id>report</id>
                <phase>verify</phase>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencies>
  </dependencies>
</project>
